--- a/wk01content.html
+++ b/wk01content.html
@@ -19,12 +19,12 @@
 	  	  at the shack would provide a bicycle on the understanding that you
 		  would return it along with payment for the amount of time that you
 		  used it in exchange for return of your deposit.   </li>
-		  <img src="https://www.torontoisland.com/bike_rental.php//IMG_1697.JPG">
+		  <img src="https://www.torontoisland.com/images/bike/IMG_1697.JPG">
 	  <li>Times have changed, now you use your smart phone to provide your
 		  credit card information to the bicycle rental company and then you are
 		  provided the code to unlock a bicycle and you are charged based on
 		  when you next lock it up.	   </li>
-		  <img src="Communique - (1040  x435px)(Lake&North)-01_1.png">
+		  <img src="https://humber.ca/staff/sites/default/files/sub-images/dropbike%20lake%20and%20north.jpg">
 	  <li>The Computer Engineering Technology capstone consists of creating
 		  project similar to this. In this example there is a lock mechanism, a
 		  set of buttons to enter a code, lights and sound to provide feedback.
@@ -35,16 +35,16 @@
 		  students A, B and C would form a group to write the corresponding app.
 		  In CENG 355, the group would package everything up together as a
 		  functioning prototype.   </li>
-		  <img src="https://raw.githubusercontent.com/six0four/StudentSenseHat/master/images/bikeshare.jpg">
+		  <img src="https://raw.githubusercontent.com/six0four/ceng317/master/images/bikeshare.jpg">
 	 </ul></li>
-	<li>Discussion of hub and spokes distributed computing model.<img src="https://raw.githubusercontent.com/six0four/StudentSenseHat/master/images/1process2control.jpg"></li>
-	<li>Discussion of group lead.<img src="https://raw.githubusercontent.com/six0four/StudentSenseHat/master/images/cribpi.jpg"></li>
-	<li>Discussion of group members.<img src="https://raw.githubusercontent.com/six0four/StudentSenseHat/master/images/stm32f103c8t6.jpg"></li>
+	<li>Discussion of hub and spokes distributed computing model.<img src="https://raw.githubusercontent.com/six0four/ceng317/master/images/1process2control.jpg"></li>
+	<li>Discussion of group lead.<img src="https://raw.githubusercontent.com/six0four/ceng317/master/images/cribpi.jpg"></li>
+	<li>Discussion of group members.<img src="https://raw.githubusercontent.com/six0four/ceng317/master/images/stm32f103c8t6.jpg"></li>
 	<li>In CENG 319 Software Project, students will work in groups to create an Android Application that can connect to a database.</li>
     <li>In CENG 317 Hardware Production Technology, students will work individually to prepare working hardware (an I2C circuit board) that can connect to a database for a sensor or effector type relevant to their Android application.</li>
     <li>In CENG 355 Computer Systems Project students work in groups to integrate their mobile application with their sensors and effectors to create an IoT system that for which both it and its application can independently
 	 connect to the same database. (The mobile application may, in addition, also connect directly via bluetooth to the IoT device.)
-	 <img src="https://raw.githubusercontent.com/six0four/StudentSenseHat/master/images/NetworkArchitectureFall2019variety.jpg"></li>
+	 <img src="https://raw.githubusercontent.com/six0four/ceng317/master/images/NetworkArchitectureFall2019variety.jpg"></li>
 	<li>The maximum size of your project is in alignment with the space below the tray in your Humber North Campus Electronics Parts kit, you are expected to bring both your project and parts kit along with safety glasses every week otherwise there is a minimum one mark deduction on the week's submission.</li>
 	<li>Each student will decide on a sensor or effector.</li>
 	<li>Possible project choices:
