Cleaning up link text

--- a/wk01content.html
+++ b/wk01content.html
@@ -82,7 +82,7 @@
       <li class="task-list-item">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
-	   L-wing rooftop solar system (PLC knowledge helpful). <a href="http://www.sma-america.com/products/solarinverters.html">Solar</a> - <a href="https://app.riipen.com/projects/7327/details">Partner: Humber Sustainable Technology Program</a>.</li>
+	   L-wing rooftop <a href="http://www.sma-america.com/products/solarinverters.html">solar</a> system (PLC knowledge helpful) - <a href="https://app.riipen.com/projects/7327/details">Partner: Humber Sustainable Technology Program</a>.</li>
       <li class="task-list-item">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
