--- a/wk01content.html
+++ b/wk01content.html
@@ -39,7 +39,7 @@
 	 </ul></li>
 	<li>Discussion of hub and spokes distributed computing model.<img src="https://raw.githubusercontent.com/six0four/ceng317/master/images/1process2control.jpg"></li>
 	<li>Discussion of group lead.<img src="https://raw.githubusercontent.com/six0four/ceng317/master/images/cribpi.jpg"></li>
-	<li>Discussion of group members.<img src="https://raw.githubusercontent.com/six0four/ceng317/master/images/stm32f103c8t6.jpg"></li>
+	<li>Discussion of group members (stm32f103c8t6).<img src="https://raw.githubusercontent.com/six0four/ceng317/master/images/stm32f103c8t6.jpg"></li>
 	<li>In CENG 319 Software Project, students will work in groups to create an Android Application that can connect to a database.</li>
     <li>In CENG 317 Hardware Production Technology, students will work individually to prepare working hardware (an I2C circuit board) that can connect to a database for a sensor or effector type relevant to their Android application.</li>
     <li>In CENG 355 Computer Systems Project students work in groups to integrate their mobile application with their sensors and effectors to create an IoT system that for which both it and its application can independently
