--- a/wk01content.html
+++ b/wk01content.html
@@ -143,7 +143,7 @@
 	   <li>Add a license: GNU Affero General Public License v3.0.</li>
 	   <li>Create repository.</li>
 	   <li>Go to the repository's settings and choose to build your GitHub Pages site from the master branch to publish Username.github.io/SensorEffector it will take at least a few minutes for the site to become live then add it as your repository website.</li>	   
-	   <li>Create index.md in your repository as a blog and add a blog entry to say repository created!</li>
+	   <li>Create index.md in your repository as a blog and add a blog entry to say repository created! (<a href="https://six0four.github.io/ceng212/">Example</a>)</li>
 	   <li>Create a documentation folder for your proposal, project schedule, budget, presentation, technical report, and poster files.</li>
 	   <li>Create an electronics folder for PCB files.</li>
 	   <li>Create a firmware folder for sensor/effector interface code.</li>
