Aligned with critical path

--- a/newcontent.html
+++ b/newcontent.html
@@ -35,7 +35,7 @@ href="https://six0four.github.io/ceng317/wk06.html">Week 6 Hardware (Oct. 8/10) 
  
  <SECTION ID="Section_7">
   <H4><a 
-href="https://six0four.github.io/ceng317/wk07.html">Week 7 Hardware (Oct. 15/17) - Breadboard Milestone</a></H4>
+href="https://six0four.github.io/ceng317/wk07.html">Week 7 Hardware (Oct. 15/17) - Breadboard and PCB Designed</a></H4>
  </SECTION>
  
  <SECTION ID="Reading_Week">
@@ -44,7 +44,7 @@ href="https://six0four.github.io/ceng317/wk07.html">Week 7 Hardware (Oct. 15/17)
 
  <SECTION ID="Section_8">
   <H4><a 
-href="https://six0four.github.io/ceng317/wk08.html">Week 8 Hardware (Oct. 29/31) - PCB Designed</a></H4>
+href="https://six0four.github.io/ceng317/wk08.html">Week 8 Hardware (Oct. 29/31) - Breadboarded Milestone</a></H4>
  </SECTION> 
  
  <SECTION ID="Section_9">
@@ -64,7 +64,7 @@ href="https://six0four.github.io/ceng317/wk11.html">Week 11 Hardware (Nov. 19/21
 
  <SECTION ID="Section_12">
   <H4><a 
-href="https://six0four.github.io/ceng317/wk12.html">Week 12 Hardware (Nov. 26/8) - Presentations</a></H4>
+href="https://six0four.github.io/ceng317/wk12.html">Week 12 Hardware (Nov. 26/8) - Presentation Due, Presentations start</a></H4>
  </SECTION>
 
  <SECTION ID="Section_13">
