Added more detail

--- a/wk01content.html
+++ b/wk01content.html
@@ -156,7 +156,27 @@
 	  <li><a href="https://github.com/six0four/ceng317/tree/master/documentation/PDFMailer111.pdf">Final product.</a></li>
 	  <li><a href="https://github.com/six0four/ceng317/tree/master/documentation/ProjectProposalStudentNameRev03.docx">Template.</a></li>
 	  <li><a href="https://github.com/six0four/ceng317/tree/master/documentation/ProposalContentStudentNameRev03.xlsx">Content.</a></li>
- 	 </ol></li>
+ 	 </ol><ol>
+	  <li>Open ProposalContentGroupName.xlsx</li>
+      <li>Update the fields and save ProposalContentGroupName.xlsx in your Documentation folder of your repository.</li>
+      <li>Also Save as PDF ProposalContentGroupName.pdf in your Documentation folder of your repository.</li>
+      <li>Open ProjectProposalGroupName.docx</li>
+	  <li>If you have done this before, confirm to Word that Yes you want to run the SQL command: SELECT * FROM 'DataBase$' then Save as PDF ProjectProposalGroupName.pdf in your Documentation folder of your repository.
+	  <li>Otherwise, from the ribbon select Mailings.</li>
+	  <li>Select the drop down from Start Mail Merge and select Step-by-Step Mail Merge Wizard.</li>
+	  <li>Select Browse from Use an existing list.</li>
+	  <li>Navigate to and Open ProposalContentGroupName.xlsx</li>
+	  <li>Click OK to Select Table DataBase$.</li>
+	  <li>Click OK to confirm Mail Merge Recipients.</li>
+	  <li>Click Next: Write your letter.</li>
+	  <li>Click Next: Preview your letters.</li>
+	  <li>If Invalid Merge Field pops up then select the matching Fields in data source and click OK.</li>
+	  <li>Click Next: Complete the merge.</li>
+	  <li>Click Print... from Merge.</li>
+	  <li>Click OK to continue.</li>
+	  <li>Choose the PDF printer and click OK.</li>
+      <li>Save PDF as ProjectProposalGroupName.pdf in your Documentation folder of your repository.</li></ol></li>
+	 </ol></li>
  	</ol></li>
   </p>
  </SECTION>
