--- a/newcontent.html
+++ b/newcontent.html
@@ -78,8 +78,7 @@ href="https://six0four.github.io/ceng317/wk14.html">Week 14 Hardware (Dec. 10/12
  </SECTION>
  
  <SECTION ID="Section_15">
-  <H4><a 
-href="https://six0four.github.io/ceng317/wk15.html">Grades due (Dec. 18)</a></H4>
+  <H4>Grades due (Dec. 18)</a></H4>
  </SECTION>
 
  <SECTION ID="Section_101">
