--- a/wk06content.html
+++ b/wk06content.html
@@ -2,19 +2,19 @@
  <HEADER ID="Header_Article_1">
   <H2>Building IoT Projects</H2>
  </HEADER>
-	
- <SECTION ID="Section_ReadingWeek">
-  <H3>Reading Week Hardware Study Day - no class</H3>
+ 
+ <SECTION ID="Section_6">
+  <H3>Week 6 Hardware</H3>
   <p>
-   <ul>Consider whether you have:
- 	<li>Ordered your parts and blogged about it - if it wasn't a study day then it would have been the milestone of bringing your parts to class.</li>
-	<li>Breadboarded your circuit to test your sensor with the development platform and use fritzing to record your work.</li>
- 	<li>Blinked an LED on a crib Pi <a href="https://six0four.github.io/StudentSenseHat/cribpi.html">getting started https://six0four.github.io/StudentSenseHat/cribpi.html</a>.</li>
-	<li>Completed <a href="https://www.lynda.com/Raspberry-Pi-tutorials/Up-Running-Raspberry-Pi/191267-2.html">https://www.lynda.com/Raspberry-Pi-tutorials/Up-Running-Raspberry-Pi/191267-2.html</a></li>
-	<li>Reviewed: <a href="https://www.lynda.com/Software-Development-tutorials/Use-BJT-switch/502049/655694-4.html?autoplay=true">https://www.lynda.com/Software-Development-tutorials/Use-BJT-switch/502049/655694-4.html?autoplay=true</a></li>
-	<li>Next week: Show your acquisitions.</li> 
+   <ul>
+    <li>Show your acquisitions.</li>
+	<li>Be sure to wear safety glasses and consult an expert (such as Kelly and/or Vlad in J233) regarding safety, you can even start at your local hackerspace (Ideally working towards IPC J-STD-001 Requirements for Soldered Electrical and Electronic Assemblies).</li>
+	<li>Also watch some soldering <a href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWBYVLNp4RYz">videos</a>.</li>
+	<li><a href="http://radiojove.gsfc.nasa.gov/telescope/soldering.htm">NASA Jove Project.</a></li>
+	<li>Next week is the Breadboard and PCB designed milestone.</li>
    </ul>
   </p>
+  
  </SECTION>
  
 </ARTICLE>
