--- a/wk08content.html
+++ b/wk08content.html
@@ -8,8 +8,9 @@
   <p>
    <ul>
    	<li>This week is the breadboarded assembly milestone for which a graded blog entry is due (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/AnalyticRubricforProgressReports.xml">rubric</a>).</li>
-	<li>Gerber file creation session.</li>
-	<li>Next week is the PCB designed milestone.</li>
+	<li>If you have any outstanding questions regarding fasteners please refer to <a href="https://www.boltdepot.com/fastener-information/Printable-Tools/Printable-Fastener-Tools.pdf">BoltDepot.com</a> which has great fastener information, while visit <a href="https://en.wikipedia.org/wiki/Wire_gauge">Wikipedia</a> regarding wire gauge.</li>
+	<li>An <a href="http://www.openscad.org/downloads.html">OpenSCAD</a> demonstration, a laser cutting explanation using CorelDraw.</li>
+	<li>Next week is the PCB soldered milestone.</li>
    </ul>
   </p>
  </SECTION> 
