--- a/wk12content.html
+++ b/wk12content.html
@@ -2,26 +2,21 @@
  <HEADER ID="Header_Article_1">
   <H2>Building IoT Projects</H2>
  </HEADER>
- 
+
  <SECTION ID="Section_12">
   <H3>Week 12 Hardware</H3>
   <p>
    <ul>
-	<li>Enclosure is due:
+	<li>This week the individual presentation is due - link to the slides from your blog, they are to cover the following topics for 1 minute or less each:
 	 <ul>
-	  <li>/2 Case encloses development platform and custom PCB.</li>
-	  <li>/2 Appropriate parts securely attached.</li>
-	  <li>/2 Appropriate parts accessible.</li>
-	  <li>/2 Design file in repository.</li>
-	  <li>/2 Photo on blog.</li>
-	 </ul></li>
-	<li>Regarding testing, up until now we have been mostly doing unit testing with each individual sensor and actuator, at this point you should be doing production testing of the integrated hardware.</li>
-	<li>If you have any outstanding questions regarding fasteners please refer to <a href="https://www.boltdepot.com/fastener-information/Printable-Tools/Printable-Fastener-Tools.pdf">BoltDepot.com</a> which has great fastener information, while visit <a href="https://en.wikipedia.org/wiki/Wire_gauge">Wikipedia</a> regarding wire gauge.</li>
- 	<li>Discussion of key project attributes to be ready for next term: mechanical, data, test code (eg. sensor read triggers actuator change).</li>
-	<li>By the conclusion of this course your project must be suitable for the computer systems project, including mechanical assembly of some type such as an acrylic case and the generic sense hat along with test code.</li>
-	<li>Please note the information about the presentations and build instructions that has already been posted under future weeks and ask any questions you may have this week since from now on it will be quite busy during class time.</li>
-	<li>Please choose a date and time for your individual presentation.</li>
-	<li>Next week the Presentation is due, link to the slides from your blog as per the week 13 instructions.</li>
+      <li>Introduction (Proposal)</li>
+      <li>Budget</li>
+      <li>Schedule</li>
+      <li>Image of enclosed hardware, screen capture of address, image of reading/writing to sensor/effector.</li>
+      <li>Course knowledge utilized from previous courses</li>
+	 </ul>
+	</li>
+	<li>Individual presentations.</li>
    </ul>
   </p>
  </SECTION>
