--- a/wk13content.html
+++ b/wk13content.html
@@ -7,16 +7,21 @@
   <H3>Week 13 Hardware</H3>
   <p>
    <ul>
-	<li>This week the individual presentation is due - link to the slides from your blog, they are to cover the following topics for 1 minute or less each:
-	 <ul>
-      <li>Introduction (Proposal)</li>
-      <li>Budget</li>
-      <li>Schedule</li>
-      <li>Image of enclosed hardware, screen capture of address, image of reading/writing to sensor/effector.</li>
-      <li>Course knowledge utilized from previous courses</li>
-	 </ul>
+	<li>Individual presentations (cont.).</li>
+	<li>Next week the Build Instructions (README.md) are due. The key points to cover are:
+	 <ol>
+	  <li>Correct README.md usage</li>
+	  <li>Introduction using a system diagram</li>
+	  <li>Bill of Materials/Budget</li>
+	  <li>Time Commitment</li>
+	  <li>Mechanical Assembly</li>
+	  <li>PCB / Soldering</li>
+	  <li>Power Up</li>
+	  <li>Unit Testing</li>
+	  <li>Production Testing</li>
+	  <li>Is the project reproducible by following your instructions?</li>
+	 </ol>
 	</li>
-	<li>Individual presentations.</li>
    </ul>
   </p>
  </SECTION>
