--- a/wk14content.html
+++ b/wk14content.html
@@ -7,23 +7,10 @@
   <H3>Week 14 Hardware</H3>
   <p>
    <ul>
-	<li>Individual presentations (cont.).</li>
-	<li>Next week the Build Instructions (README.md) are due. The key points to cover are:
-	 <ol>
-	  <li>Correct README.md usage</li>
-	  <li>Introduction using a system diagram</li>
-	  <li>Bill of Materials/Budget</li>
-	  <li>Time Commitment</li>
-	  <li>Mechanical Assembly</li>
-	  <li>PCB / Soldering</li>
-	  <li>Power Up</li>
-	  <li>Unit Testing</li>
-	  <li>Production Testing</li>
-	  <li>Is the project reproducible by following your instructions?</li>
-	 </ol>
-	</li>
+	<li>This week your build instructions (README.md) are due as per the key points to cover discussed in week 11 and described on the week 13 page.</li>
+	<li>Next week the holiday break begins.</li>
    </ul>
   </p>
  </SECTION>
-
+ 
 </ARTICLE>
