--- a/wk04content.html
+++ b/wk04content.html
@@ -9,7 +9,7 @@
    <ul>
  	<li>Budget Due -> trade it for your previously submitted work (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/Week4AnalyticRubricforBudget.xml">rubric</a>), post a link to your submission on your blog.</li>
 	<li>Remember to wear your glasses for safety.</li>
- 	<li>Next week: Proof of purchase due by posting on your blog (be sure to not post any sensitive information) and, if week 6 wasn't a study day you'd be bringing your parts to class which will be the case for week 7.</li>
+ 	<li>Next week: Proof of purchase due by posting on your blog (be sure to not post any sensitive information) and week 6 you'll be bringing your parts to class.</li>
    </ul>
   </p>
  </SECTION>
