--- a/wk10content.html
+++ b/wk10content.html
@@ -7,13 +7,11 @@
   <H3>Week 10 Hardware</H3>
   <p>
    <ul>
-	<li>This week is the soldering milestone for which a graded blog entry is due (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/AnalyticRubricforProgressReports.xml">rubric</a>).</li>
-	<li>Next week is the power-up milestone.</li>
-	<li>Next week a Progress Report is due.</li>
-	<li>Next week starts with the submission of an Individual Progress report and continues with the Hardware Demonstration in class during which you should be able to demonstrate reading your sensor/effector.</li>
+	<li>This week is the power-up milestone which was be peer graded in the past(<a href="https://github.com/six0four/ceng317/tree/master/rubrics/Week7PeerGradingRubricforPCB.xml">rubric</a>).</li>
+	<li>Progress Report Due, Hardware Demonstration - demonstration of functional hardware.</li>
+	<li>Next week the enclosure is due.</li>
    </ul>
   </p>
  </SECTION>
- 
 
 </ARTICLE>
