--- a/wk11content.html
+++ b/wk11content.html
@@ -2,14 +2,25 @@
  <HEADER ID="Header_Article_1">
   <H2>Building IoT Projects</H2>
  </HEADER>
-
+ 
  <SECTION ID="Section_11">
   <H3>Week 11 Hardware</H3>
   <p>
    <ul>
-	<li>This week is the power-up milestone which will be peer graded (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/Week7PeerGradingRubricforPCB.xml">rubric</a>).</li>
-	<li>Progress Report Due, Hardware Demonstration - demonstration of functional hardware.</li>
-	<li>Next week the enclosure is due.</li>
+	<li>Enclosure is due:
+	 <ul>
+	  <li>/2 Case encloses development platform and custom PCB.</li>
+	  <li>/2 Appropriate parts securely attached.</li>
+	  <li>/2 Appropriate parts accessible.</li>
+	  <li>/2 Design file in repository.</li>
+	  <li>/2 Photo on blog.</li>
+	 </ul></li>
+	<li>Regarding testing, up until now we have been mostly doing unit testing with each individual sensor and actuator, at this point you should be doing production testing of the integrated hardware.</li>
+ 	<li>Discussion of key project attributes to be ready for next term: mechanical, data, test code (eg. sensor read triggers actuator change).</li>
+	<li>By the conclusion of this course your project must be suitable for the computer systems project, including mechanical assembly of some type such as an acrylic case and the generic sense hat along with test code.</li>
+	<li>Please note the information about the presentations and build instructions that has already been posted under future weeks and ask any questions you may have this week since from now on it will be quite busy during class time.</li>
+	<li>Please choose a date and time for your individual presentation.</li>
+	<li>Next week the Presentation is due, link to the slides from your blog as per the week 13 instructions.</li>
    </ul>
   </p>
  </SECTION>
