Added project links

--- a/wk03content.html
+++ b/wk03content.html
@@ -28,8 +28,52 @@
 
 	 </ol>
 	</li>
-	<li>2019-2020 A Projects:
-	 <ol>
+	<li>2019-2020 Projects:
+	 <ol>ABC
+		<li>Lumi: <a href="https://github.com/Abdirashid-Yusuf/Meddy">Abdirashid</a>, 
+				   <a href="https://github.com/">Manshur</a>, Deval</li>
+		<li>MakerKids: <a href="https://github.com/minhnguyen999/hello-world">Minh</a>, 
+				   <a href="https://github.com/">Trung</a>, Haider</li>
+	 </ol>
+	 <ol>ABB
+		<li>MakerKids: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby</a>, 
+				   <a href="https://github.com/">Sam</a>, 
+				   <a href="https://github.com/">Boswell</a></li>
+	 </ol>
+	 <ol>BBC
+		<li>PartsCrib: <a href="https://github.com/">Mohamed</a>, 
+				   <a href="https://github.com/">Ricky</a>, Padda</li>
+		<li>PartsCrib: <a href="https://github.com/RDinh/NFCRFID">Robert</a>, 
+				   <a href="https://github.com/asperham/Parts-Crib">Colin</a>, Jonathan</li>
+	 </ol>
+	 <ol>ACC
+		<li>Restaurant pager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang</a>, Hyoje, Daniel</li>
+	 </ol>
+	 <ol>AABB
+		<li>SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh</a>, 
+				   <a href="https://github.com/">Shawn</a>, 
+				   <a href="https://github.com/">Thomas</a>, 
+				   <a href="https://github.com/">Baltej</a></li>
+	 </ol>
+	 <ol>AAA
+		<li>Solar: <a href="https://github.com/">Ahmad</a>, 
+				   <a href="https://github.com/">Ramin</a>, 
+				   <a href="https://github.com/">Matthew</a></li>
+	 </ol>
+	 <ol>AAC
+		<li>Tennis: <a href="https://github.com/Warris-Sohi/SmartTennisBallMachine">Gurwarris</a>, 
+				   <a href="https://github.com/Sahil-Sahil/TennisBall">Sahil</a>, Nicolas</li>
+	 </ol>
+	 <ol>ACC
+		<li>Tennis: <a href="https://github.com/">Abshir</a>, Mahendra, Ijlal</li>
+	 </ol>
+	 <ol>AB
+		<li>Vending machine: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan</a>, 
+				   <a href="https://github.com/">Husnal</a></li>
+	 </ol>
+	 <ol>A
+		<li><a href="https://github.com/">Nam</a></li>
+
 	  <li>SmartWear: <a href="https://github.com/JayJadav/smartware">Jay</a>, <a href="https://github.com/anshulsanan/smart_wear">Anshul</a>.</li>
 	  <li>PlantNursery: <a href="https://github.com/Jasleen-Grewal/Nursery">Jasleen</a>, <a href="https://github.com/GifZeb/Nursery">Tarundeep</a>, <a href="https://github.com/Divya-Aggarwal/Arboretum">Divya</a>.</li>
 	  <li>Campus Navigator/Explorer: <a href="https://github.com/IshanKhuttan/HumberNavigator">Ishan-STM32</a>, <a href="https://github.com/HumberCampusNavigator/North">Bettin-LSM9DS0</a>, <a href="https://github.com/HumberCampusExplorer/CampusExplorer">Anoopjot-TMP36</a>.</li>
