Three more project links

--- a/wk03content.html
+++ b/wk03content.html
@@ -56,9 +56,9 @@
 				   <a href="https://github.com/">Baltej</a></li>
 	 </ol>
 	 <ol>AAA
-		<li>Solar: <a href="https://github.com/">Ahmad</a>, 
-				   <a href="https://github.com/">Ramin</a>, 
-				   <a href="https://github.com/">Matthew</a></li>
+		<li>Solar: <a href="https://github.com/E-Hajj/Ahmad">Ahmad</a>, 
+				   <a href="https://github.com/RaminKurkeice/hello-world">Ramin</a>, 
+				   <a href="https://github.com/TheSweeterMan/TBD">Matthew</a></li>
 	 </ol>
 	 <ol>AAC
 		<li>Tennis: <a href="https://github.com/Warris-Sohi/SmartTennisBallMachine">Gurwarris</a>, 
