Added part of a url

--- a/wk03content.html
+++ b/wk03content.html
@@ -53,7 +53,7 @@
 	 </ol>
 	 <ol>AABB
 		<li>SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh</a>, 
-				   <a href="https://github.com/">Shawn</a>, 
+				   <a href="https://github.com/theoriginalwech/">Shawn</a>, 
 				   <a href="https://github.com/">Thomas</a>, 
 				   <a href="https://github.com/">Baltej</a></li>
 	 </ol>
