--- a/wk03content.html
+++ b/wk03content.html
@@ -42,14 +42,14 @@
 	 </ol>
 	 <ol>BBC
 		<li>PartsCrib: <a href="https://github.com/">Mohamed</a>, 
-				   <a href="https://github.com/">Ricky</a>, Padda</li>
+				   <a href="https://github.com/">Ricky</a>, Padda - RC522 RFID</li>
 	 </ol>
 	 <ol>AAC		   
 		<li>PartsCrib: <a href="https://github.com/RDinh/NFCRFID">Robert</a>, 
-				   <a href="https://github.com/asperham/Parts-Crib">Colin</a>, Jonathan</li>
+				   <a href="https://github.com/asperham/Parts-Crib">Colin</a>, Jonathan - LCD</li>
 	 </ol>
 	 <ol>ACC
-		<li>Restaurant pager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang</a>, Hyoje, Daniel</li>
+		<li>Restaurant pager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang</a>, Hyoje - Weight, Daniel - Pressure</li>
 	 </ol>
 	 <ol>AABB
 		<li>SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh</a>, 
@@ -58,16 +58,16 @@
 				   <a href="https://github.com/">Baltej</a></li>
 	 </ol>
 	 <ol>AAA
-		<li>Solar: <a href="https://github.com/E-Hajj/Ahmad">Ahmad</a>, 
+		<li>Solar Gazebo: <a href="https://github.com/E-Hajj/Ahmad">Ahmad</a>, 
 				   <a href="https://github.com/RaminKurkeice/hello-world">Ramin</a>, 
 				   <a href="https://github.com/TheSweeterMan/TBD">Matthew</a></li>
 	 </ol>
 	 <ol>AAC
 		<li>Tennis: <a href="https://github.com/Warris-Sohi/SmartTennisBallMachine">Gurwarris</a>, 
-				   <a href="https://github.com/Sahil-Sahil/TennisBall">Sahil</a>, Nicolas</li>
+				   <a href="https://github.com/Sahil-Sahil/TennisBall">Sahil</a>, Nicolas - Servo</li>
 	 </ol>
 	 <ol>ACC
-		<li>Tennis: <a href="https://github.com/">Abshir</a>, Mahendra, Ijlal</li>
+		<li>Tennis: <a href="https://github.com/">Abshir</a>, Mahendra - LM393 Speed, Ijlal - VCNL4040 Proximity</li>
 	 </ol>
 	 <ol>AB
 		<li>Vending machine: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan</a>, 
@@ -75,6 +75,50 @@
 	 </ol>
 	 <ol>A
 		<li><a href="https://github.com/">Nam</a></li>
+	 </ol>
+	 <ol>B_
+		<li>Smart House Control<a href="https://github.com/">Bao</a>, Slava</li>
+	 </ol>
+	 <ol>BBB
+		<li>AutomotiveUI: <a href="https://github.com/">Kevin</a>, 
+				   <a href="https://github.com/">Quyen</a>, 
+				   <a href="https://github.com/">Seung</a></li>
+	 </ol>
+	 <ol>BB?
+		<li>Greenhouse: <a href="https://github.com/">Daniel - Pressure</a>, 
+				   <a href="https://github.com/">Ryan</a></li>
+	 </ol>
+	 <ol>B
+		<li><a href="https://github.com/">Adrian</a></li>
+	 </ol>
+	 <ol>BBB
+		<li>Lumi: <a href="https://github.com/">Harsimran</a>, 
+				   <a href="https://github.com/">Gino</a>, 
+				   <a href="https://github.com/">Kyle</a></li>
+	 </ol>
+	 <ol>BBB
+		<li>Parking: <a href="https://github.com/">Saina</a>, 
+				   <a href="https://github.com/">Navkrian</a>, 
+				   <a href="https://github.com/">Harleen</a></li>
+	 </ol>
+	 <ol>BCC
+		<li>Parking: <a href="https://github.com/">Daniel</a>, 
+				   Vikas VCNL4010 Proximity, George - IR Beam</li>
+	 </ol>
+	 <ol>BBC
+		<li>SmartHouse: <a href="https://github.com/">Lucas</a>, 
+				   <a href="https://github.com/">Andrew</a>, 
+				   Luca - SHT31-D</li>
+	 </ol>
+	 <ol>BC_
+		<li>SmartWatch: <a href="https://github.com/">Kevin</a>, 
+				   Aiden - Temperature PT100, Gabriel</li>
+	 </ol>
+	 <ol>B__
+		<li>Solar: <a href="https://github.com/">June Lwing PLC</a>, 
+				   Vidyaanand, Nicholas</li>
+	 </ol>
+	 <ul>
 
 	  <li>SmartWear: <a href="https://github.com/JayJadav/smartware">Jay</a>, <a href="https://github.com/anshulsanan/smart_wear">Anshul</a>.</li>
 	  <li>PlantNursery: <a href="https://github.com/Jasleen-Grewal/Nursery">Jasleen</a>, <a href="https://github.com/GifZeb/Nursery">Tarundeep</a>, <a href="https://github.com/Divya-Aggarwal/Arboretum">Divya</a>.</li>
