Project links added

--- a/wk03content.html
+++ b/wk03content.html
@@ -31,9 +31,9 @@
 	<li>2019-2020 Projects:
 	 <ol>ABC
 		<li>Lumi: <a href="https://github.com/Abdirashid-Yusuf/Meddy">Abdirashid</a>, 
-				   <a href="https://github.com/">Manshur</a>, Deval</li>
+				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur</a>, Deval</li>
 		<li>MakerKids: <a href="https://github.com/minhnguyen999/hello-world">Minh</a>, 
-				   <a href="https://github.com/">Trung</a>, Haider</li>
+				   <a href="https://github.com/Trung28899/SensoDrive">Trung</a>, Haider</li>
 	 </ol>
 	 <ol>ABB
 		<li>MakerKids: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby</a>, 
@@ -41,21 +41,21 @@
 				   <a href="https://github.com/">Boswell</a></li>
 	 </ol>
 	 <ol>BBC
-		<li>PartsCrib: <a href="https://github.com/">Mohamed</a>, 
-				   <a href="https://github.com/">Ricky</a>, Padda - RC522 RFID</li>
+		<li>PartsCrib: <a href="https://github.com/c3ko/SecondFactorKeypad">Mohamed</a>, 
+				   <a href="https://github.com/rickyramnath97/gps">Ricky</a>, Padda - RC522 RFID</li>
 	 </ol>
 	 <ol>AAC		   
 		<li>PartsCrib: <a href="https://github.com/RDinh/NFCRFID">Robert</a>, 
 				   <a href="https://github.com/asperham/Parts-Crib">Colin</a>, Jonathan - LCD</li>
 	 </ol>
 	 <ol>ACC
-		<li>Restaurant pager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang</a>, Hyoje - Weight, Daniel - Pressure</li>
+		<li>Restaurant pager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang</a>, Hyoje - Weight, Daniel W - Pressure</li>
 	 </ol>
 	 <ol>AABB
 		<li>SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh</a>, 
 				   <a href="https://github.com/theoriginalwech/">Shawn</a>, 
-				   <a href="https://github.com/">Thomas</a>, 
-				   <a href="https://github.com/">Baltej</a></li>
+				   <a href="https://github.com/">Thomas (need link) - ADXL335</a>, 
+				   <a href="https://github.com/baltejbal/SWATCH">Baltej</a></li>
 	 </ol>
 	 <ol>AAA
 		<li>Solar Gazebo: <a href="https://github.com/E-Hajj/Ahmad">Ahmad</a>, 
@@ -71,51 +71,51 @@
 	 </ol>
 	 <ol>AB
 		<li>Vending machine: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan</a>, 
-				   <a href="https://github.com/">Husnal</a></li>
+				   <a href="https://github.com/HusnalK/Resistor-Value-Recognizer-RVR">Husnal - luminosity</a></li>
 	 </ol>
 	 <ol>A
 		<li><a href="https://github.com/">Nam</a></li>
 	 </ol>
 	 <ol>B_
-		<li>Smart House Control<a href="https://github.com/">Bao</a>, Slava</li>
+		<li>Smart House Control<a href="https://github.com/diepbaoquy97/SmartHome">Bao</a>, Slava</li>
 	 </ol>
 	 <ol>BBB
-		<li>AutomotiveUI: <a href="https://github.com/">Kevin</a>, 
-				   <a href="https://github.com/">Quyen</a>, 
-				   <a href="https://github.com/">Seung</a></li>
+		<li>AutomotiveUI: <a href="https://github.com/kevin-lieng/emergensui-automotive-ui">Kevin</a>, 
+				   <a href="https://github.com/qu0cquyen/Automotive_UI">Quyen - DS18B20 Temperature</a>, 
+				   <a href="https://github.com/SeungMin-Song/Dashboard-Sensors">Seung</a></li>
 	 </ol>
 	 <ol>BB?
-		<li>Greenhouse: <a href="https://github.com/">Daniel - Pressure</a>, 
-				   <a href="https://github.com/">Ryan</a></li>
+		<li>Greenhouse: <a href="https://github.com/DBOO92/317Hardware">Daniel B - Pressure</a>, 
+				   <a href="https://github.com/McAdieCENG/CENGProject">Ryan</a>,
+				   Aiden?</li>
+				   
 	 </ol>
 	 <ol>B
-		<li><a href="https://github.com/">Adrian</a></li>
+		<li><a href="https://github.com/AdrianD-B/SmartWatch">Adrian</a></li>
 	 </ol>
 	 <ol>BBB
-		<li>Lumi: <a href="https://github.com/">Harsimran</a>, 
-				   <a href="https://github.com/">Gino</a>, 
-				   <a href="https://github.com/">Kyle</a></li>
-	 </ol>
-	 <ol>BBB
-		<li>Parking: <a href="https://github.com/">Saina</a>, 
-				   <a href="https://github.com/">Navkrian</a>, 
-				   <a href="https://github.com/">Harleen</a></li>
-	 </ol>
-	 <ol>BCC
-		<li>Parking: <a href="https://github.com/">Daniel</a>, 
-				   Vikas VCNL4010 Proximity, George - IR Beam</li>
+		<li>Lumi: <a href="https://github.com/simransaini1999/Lumi-Monitor">Harsimran</a>, 
+				   <a href="https://github.com/gseridon/LumiMonitor">Gino</a>, 
+				   <a href="https://github.com/kylev1999/LumiMonitor">Kyle</a></li>
+		<li>Parking: <a href="https://github.com/SainaKapoor/ParkingEaze">Saina</a>, 
+				   <a href="https://github.com/NavkiranKaur/ParkingEaze">Navkiran</a>, 
+				   <a href="https://github.com/HarleenSaini19/parkingEaze">Harleen</a></li>
 	 </ol>
 	 <ol>BBC
-		<li>SmartHouse: <a href="https://github.com/">Lucas</a>, 
-				   <a href="https://github.com/">Andrew</a>, 
+		<li>SmartHouse: <a href="https://github.com/lucasfini/SmartLock">Lucas</a>, 
+				   <a href="https://github.com/getLiuaba/Smart-Door-Lock">Andrew</a>, 
 				   Luca - SHT31-D</li>
 	 </ol>
+	 <ol>BCC
+		<li>Parking: <a href="https://github.com/">Daniel O</a>, 
+				   Vikas VCNL4010 Proximity, George - IR Beam</li>
+	 </ol>
 	 <ol>BC_
-		<li>SmartWatch: <a href="https://github.com/">Kevin</a>, 
+		<li>SmartWatch: <a href="https://github.com/kwitaszek/SmartWatch">Kevin</a>, 
 				   Aiden - Temperature PT100, Gabriel</li>
 	 </ol>
 	 <ol>B__
-		<li>Solar: <a href="https://github.com/">June Lwing PLC</a>, 
+		<li>Solar: <a href="https://github.com/junedacaya/L-WingSolarPanelInteractiveDisplay">June Lwing PLC</a>, 
 				   Vidyaanand, Nicholas</li>
 	 </ol>
 	 <ul>
