--- a/wk03content.html
+++ b/wk03content.html
@@ -53,16 +53,16 @@
 	 </ol>
 	 <ol>AB
 		<li>Vending machine: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan</a>, 
-				   <a href="https://github.com/HusnalK/Resistor-Value-Recognizer-RVR">Husnal - luminosity</a></li>
+				   <a href="https://github.com/HusnalK/Resistor-Value-Recoganizer-RVR">Husnal - luminosity</a></li>
 	 </ol>
 	 <ol>A
 		<li><a href="https://github.com/">Nam</a></li>
 	 </ol>
 	 <ol>B_
-		<li>Smart House Control<a href="https://github.com/diepbaoquy97/SmartHome">Bao</a>, Slava</li>
+		<li>Smart House Control: <a href="https://github.com/diepbaoquy97/SmartHome">Bao</a>, Slava</li>
 	 </ol>
 	 <ol>BBB
-		<li>AutomotiveUI: <a href="https://github.com/kevin-lieng/emergensui-automotive-ui">Kevin</a>, 
+		<li>AutomotiveUI: <a href="https://github.com/kevin-lieng/emegensui-automotive-ui">Kevin L</a>, 
 				   <a href="https://github.com/qu0cquyen/Automotive_UI">Quyen - DS18B20 Temperature</a>, 
 				   <a href="https://github.com/SeungMin-Song/Dashboard-Sensors">Seung</a></li>
 	 </ol>
@@ -85,16 +85,16 @@
 	 </ol>
 	 <ol>BBC
 		<li>SmartHouse: <a href="https://github.com/lucasfini/SmartLock">Lucas</a>, 
-				   <a href="https://github.com/getLiuaba/Smart-Door-Lock">Andrew</a>, 
+				   <a href="https://github.com/getLiauba/SmartHomeMonitor">Andrew</a>, 
 				   Luca - SHT31-D</li>
 	 </ol>
 	 <ol>BCC
-		<li>Parking: <a href="https://github.com/">Daniel O</a>, 
+		<li>Parking: <a href="https://github.com/InfiniteMaximum/SmartParkingLotSystem">Daniel O</a>, 
 				   Vikas VCNL4010 Proximity, George - IR Beam</li>
 	 </ol>
 	 <ol>BC_
-		<li>SmartWatch: <a href="https://github.com/kwitaszek/SmartWatch">Kevin</a>, 
-				   Aiden - Temperature PT100, Gabriel</li>
+		<li>SmartWatch: <a href="https://github.com/kwitaszek/SmartWatch">Kevin W</a>, 
+				   AntonioAiden - Temperature PT100, Gabriel</li>
 	 </ol>
 	 <ol>B__
 		<li>Solar: <a href="https://github.com/junedacaya/L-WingSolarPanelInteractiveDisplay">June Lwing PLC</a>, 
